<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48px"
    tools:context=".ThemePageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/radioButtonLightTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:padding="48px"
                android:text="@string/app_light_theme"
                android:theme="@style/AppTheme.RadioButton" />

            <RadioButton
                android:id="@+id/radioButtonDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:padding="48px"
                android:text="@string/app_dark_theme"
                android:theme="@style/AppTheme.RadioButton" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="48px"
            android:layout_marginLeft="48px"
            android:layout_marginTop="48px"
            android:layout_marginEnd="48px"
            android:layout_marginRight="48px"
            android:layout_marginBottom="48px"
            android:gravity="center|center_horizontal"
            android:padding="48px"
            android:text="@string/btn_next"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>

</FrameLayout>